# ProcureAI

./: DEMO.md  Readme.md
client/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/scripts/: generate-vendor-docs.mjs
client/src/: App.tsx  index.css  main.tsx
client/src/components/: theme-toggle.tsx
client/src/lib/: ability.ts  chat-messages.ts  detect-template-sections.ts  export-document.ts  extract-document-text.ts  extract-proposal-file.ts  langgraph-client.ts  mock-data.ts  mock-vendor-proposals.ts  procurement-meta.ts  rfp-content.ts  rfp-templates.ts  vendor-analysis.ts
client/src/pages/: admin-pages.tsx  dashboard-page.tsx  login-page.tsx  procurement-chat-page.tsx  procurement-list-page.tsx  procurement-vendors-page.tsx  vendor-proposal-chat-page.tsx
server/: .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt
server/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
server/src/agent/: __init__.py
server/src/agent/proposal/: demo_content.py  graph.py  prompts.py  schemas.py  state.py
server/src/agent/proposal/nodes/: analyze.py
server/src/agent/proposal_chat/: graph.py  prompts.py  state.py
server/src/agent/proposal_chat/nodes/: chat.py
server/src/agent/rfp/: __init__.py  graph.py  llm.py  prompts.py  schemas.py  state.py
server/src/agent/rfp/nodes/: __init__.py  _helpers.py  advise.py  analyze.py  await_human.py  await_review.py  compose.py  routing.py  triage.py
(+28 files in other folders)
